# sdd-agent-harness

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  RUNNING.md  agent.py  alembic.ini  docker-entrypoint.sh  package.json  playwright.config.ts  pyproject.toml  render.yaml  requirements.txt
.claude/: .gitignore  settings.json
.claude/agents/: agent-builder.md  analyser.md  code-generator.md  deployer.md  drift-auditor.md  executor.md  plan-reviewer.md  planner.md  qa-auditor.md  researcher.md  reviewer.md  spec-reviewer.md  spec-writer.md  tech-architect.md  tech-designer.md
.claude/commands/: build.md  deploy.md  gates.md  maintain.md  spec-new-capability.md
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  deploy.yml
agent/: __main__.py  config.py  db.py  domain.py  duck.py  gate_eval.py  graph.py  runner.py  seed.py  server.py  state.py  tools.py
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_datasets.py  0002_analyst.py  0002_data_analysis.py  0002_data_analyst_models.py  0002_datachat.py  0002_datasets_and_analyses.py  0002_datasets_questions.py  0002_datasets_runs.py  0003_sql_mode.py  530216b527e1_initial.py  835cdb8ae996_initial_mcp_server_schema.py  84404809a3d8_add_message_tokens.py  a5ff0c00d8cb_add_chart_json_to_messages.py  dd05e642508b_initial.py
docs/: refactor-plan.md  sdd-deck.html  sdd-deck.md
evals/: cases.jsonl  harness.py  run_evals.py
frontend/: package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.mjs  tsconfig.json
frontend/app/: ChatPage.js
harness/: README.md  ai-agents.md  generate.py  harness.md  layout.md  reconcile.md
harness/agents/: agent-builder.md  drift-auditor.md  plan-reviewer.md  planner.md  qa-auditor.md  spec-reviewer.md  spec-writer.md  tech-designer.md
harness/benchmark/: README.md  results.md  rubric.md
harness/patterns/: agentic-ai.md  code.md  deploy.md  engineering.md  guardrails-and-hitl.md  interface.md  model-and-providers.md  observability-and-evals.md  observability.md  persistence.md  phases.md  react-agent.md  spec-driven.md  tech-stack.md  test-driven.md  ux.md  working-with-llms.md
harness/process/: README.md
harness/rules/: ai-agents.md  git-and-delivery.md  git.md  gotchas.md  non-negotiables.md  tech-stack.md  testing.md
harness/scripts/: demo_gate.sh
harness/workflows/: build.md  deploy.md  gates.md  maintain.md  spec-new-capability.md  zero-shot-build.md
logs/: PLAN.md
logs/sessions/: 2026-06-22-045955-v2.md
reports/: implementation-plan.md
reports/sessions/: 2026-06-18-120000-feature-datachat-v0.2.md  2026-06-18-173321-agent-builder.md  2026-06-22-054118-agent-builder.md  2026-06-23-152555-mcp-formalization.md  2026-06-25-133432-session-pools-and-memory.md  (+2 more)
samples/: sales.csv
scripts/: preflight.py  reset.py
spec/: README.md  agent-graph.md  agent.md  agentic-ai.md  api.md  architecture.md  code-style.md  constitution.md  data-model.md  data.md  delivery-plan.md  product.md  roadmap.md  tech-stack.md  ui.md  vision.md
spec/features/: FR-001.md
src/: __main__.py  config.py  graph.py  guardrails.py  llm.py  memory.py  runner.py  server.py  state.py  tools.py
tests/: conftest.py  test_api_flow.py  test_capabilities.py  test_charts.py  test_dashboard_fr.py  test_datasets.py  test_demo_gate.py  test_extensions.py  test_guardrails.py  test_ingest.py  test_loop.py  test_phase1_backend.py  test_startup.py
ui/: package-lock.json  package.json
(+559 files in other folders)
