[project]
name = "agentic-boilerplate"
version = "0.1.0"
description = "Opinionated agentic-AI boilerplate — a data-analysis assistant (pandas tools, memory, guardrails/HITL, streaming) proven by a mechanical gate"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.32.1",
    "pydantic-settings==2.7.0",
    "langchain==1.3.10",
    "langchain-core==1.4.8",
    "langchain-google-genai==4.2.5",
    "langgraph==1.2.6",
    "google-genai==2.9.0",
    "sqlalchemy==2.0.36",
    "aiosqlite==0.20.0",
    "pandas==2.2.3",
    "numpy==2.2.1",
    "httpx==0.28.1",
    "python-multipart==0.0.20",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "pytest-playwright==0.6.2",
    "playwright==1.49.1",
    "anyio>=4.8",
]

[tool.hatch.build.targets.wheel]
packages = ["agent"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["."]
testpaths = ["tests"]
# Browser e2e tests import Playwright's sync API, which installs greenlet-based
# event-loop machinery at *collection* time — that poisons pytest-asyncio's
# per-test loops and makes every async test error. So a bare `pytest` excludes
# the e2e dir and runs the unit/gate suite clean. Run e2e explicitly against a
# live server with: pytest tests/e2e/ -o addopts=""  (gate check 8 does this).
addopts = "--ignore=tests/e2e"
