[project]
name = "agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "structlog>=24.1",
    "langgraph>=0.1",
    "google-genai>=2.9.0",
    "pandas>=2.2",
    "duckdb>=1.0",
    "plotly>=5.22",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-playwright>=0.5.0",
    "playwright>=1.43.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[dependency-groups]
dev = [
    "playwright>=1.43.0",
    "pytest-playwright>=0.5.0",
]
